# Rubik-s-cube-Reinforcement-learning

./: .gitignore  Dockerfile  Dockerfile.Build  README.md  cube.py  cubeAPI.py  docker-compose.yml  pyproject.toml  requirements.txt  requirements_build.txt  requirements_old.txt  server.py  serverClone.py  singleSolveCross.py  singleSolveXCross.py  test.c  tmpserver.py
config/: cube3.ini
environment/: CubeN.py
networks/: CubeNetPaper.py  CubeNetRes.py  CubeNetSimple.py  getNetwork.py
search/: BWAS.py
static/: style.css
static/js/: index.js  jquery.cube.threejs.js  roundedBoxGeometry.js
templates/: index.html
